--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 cors-policy.xml
 mobile-hub-project.zip
+
+#awsmobilejs
+aws-info.json
+project-info.json
+aws-exports.js
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
